--- a/index.css
+++ b/index.css
@@ -10,18 +10,70 @@ html {
 body {
     display: flex;
     justify-content: center;
-    font-size: 1.2rem;
+    align-items: center;
+
     max-width: 1440px;
     margin: 0 auto;
-    font-family: "Montserrat", Arial, sans-serif;
+    /* margin: 0px 8px ; */
+    font-size: 1.6rem;
+    font-family: "Helvetica", Arial, sans-serif;
+
     background-color: #F2F2F0;;
 }
 
 .main__wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+
+    max-width: 600px;
+    min-height: 400px;
+    margin: 100px auto;
+    padding: 20px;
 
     background-color: white;
-    border: 1px solid red;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+
+    font-size: 2em;
+    font-weight: bold;
+}
+
+input {
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+button {
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+    
+    font-size: 1.8rem;
+    text-transform: uppercase;
+
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    cursor: pointer;
+
+    transition: background-color 0.2s ease;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+.total {
+    display: none;
 }
